# term_paper_2022

./: .gitignore  AbstractViewOfProgram.xmi  AbstractViewOfWindow.xmi  CMakeLists.txt  install.sh  resource.qrc  uninstall.sh
.kdev4/: term_paper_2022.kdev4
install_files/: TermPaper.desktop
resource/install_files/: Workerin.desktop
resource/style/: Yashi.qss  _Yashi.qss
server/src/main/java/com/configs/: WebSecurityConfig.java
server/src/main/java/com/controllers/: AccountController.java  EducationInternshipController.java  MainController.java
server/src/main/java/com/dao/: AccountDAO.java  ResumeDAO.java  VacancyDAO.java
server/src/main/java/com/models/: Account.java  Vacancy.java
server/term_paper/: .gitignore
server/term_paper/src/main/java/com/controllers/: AccountController.java  EducationInternshipController.java  MainController.java  ResumeController.java  VacancyController.java
server/term_paper/src/main/java/com/dao/: AccountDAO.java  EducationInternshipDAO.java  ResumeDAO.java  VacancyDAO.java
server/term_paper/src/main/java/com/models/: EducationInternship.java  Resume.java
server/term_paper/src/main/resources/: application.properties
source/: main.cxx
source/core/: application.cxx  application.hxx  log.cxx  log.hxx
source/database/: database.cxx  database.hxx
source/network/: conector.cxx  conector.hxx  cookiesmanager.cxx  cookiesmanager.hxx
source/network/dao/: accountdao.cxx  accountdao.hxx  dao.cxx  dao.hxx  educationdao.cxx  educationdao.hxx  networkdao.cxx  networkdao.hxx  resumedao.cxx  resumedao.hxx  vacancydao.cxx  vacancydao.hxx
source/network/models/: account.cxx  account.hxx  education.cxx  education.hxx  resume.cxx  resume.hxx  vacancy.cxx  vacancy.hxx
source/windows/authorization/: authorizationwindow.cxx  authorizationwindow.hxx  authorizationwindow.ui
source/windows/authorization/register/: registerwindow.cxx  registerwindow.hxx  registerwindow.ui
source/windows/controlallprofiles/: controlallprofileswindow.cxx  controlallprofileswindow.hxx  controlallprofileswindow.ui
source/windows/controlcurrentprofiles/: controlcurrentprofileswindow.cxx  controlcurrentprofileswindow.hxx  controlcurrentprofileswindow.ui
source/windows/controllallprofile/: controllallprofilewindow.cxx  controllallprofilewindow.hxx  controllallprofilewindow.ui
source/windows/controllcurrentprofile/: controllcurrentprofilewindow.cxx  controllcurrentprofilewindow.hxx  controllcurrentprofilewindow.ui
source/windows/createitem/: createitemwindow.cxx  createitemwindow.hxx  createitemwindow.ui
source/windows/exposeitem/: exposeitemwindow.cxx  exposeitemwindow.hxx  exposeitemwindow.ui
source/windows/filter/: filterwindow.cxx  filterwindow.hxx  filterwindow.ui
source/windows/model/account/: accountcreatewindow.cxx  accountcreatewindow.hxx  accountcreatewindow.ui  accountdeletewindow.cxx  accountdeletewindow.hxx  accountdeletewindow.ui  accountreadwindow.cxx  accountreadwindow.hxx  accountreadwindow.ui  accountupdatewindow.cxx  accountupdatewindow.hxx  accountupdatewindow.ui
source/windows/model/education/: educationcreatewindow.cxx  educationcreatewindow.hxx  educationcreatewindow.ui  educationdeletewindow.cxx  educationdeletewindow.hxx  educationdeletewindow.ui  educationreadwindow.cxx  educationreadwindow.hxx  educationreadwindow.ui  educationupdatewindow.cxx  educationupdatewindow.hxx  educationupdatewindow.ui
source/windows/model/resume/: resumecreatewindow.cxx  resumecreatewindow.hxx  resumecreatewindow.ui  resumedeletewindow.cxx  resumedeletewindow.hxx  resumedeletewindow.ui  resumereadwindow.cxx  resumereadwindow.hxx  resumereadwindow.ui  resumeupdatewindow.cxx  resumeupdatewindow.hxx  resumeupdatewindow.ui
source/windows/model/vacancy/: vacancycreatewindow.cxx  vacancycreatewindow.hxx  vacancycreatewindow.ui  vacancydeletewindow.cxx  vacancydeletewindow.hxx  vacancydeletewindow.ui  vacancyreadwindow.cxx  vacancyreadwindow.hxx  vacancyreadwindow.ui  vacancyupdatewindow.cxx  vacancyupdatewindow.hxx  vacancyupdatewindow.ui
source/windows/owerviewadmin/: owerviewadminwindow.cxx  owerviewadminwindow.hxx  owerviewadminwindow.ui
source/windows/owerviewuser/: owerviewuserwindow.cxx  owerviewuserwindow.hxx  owerviewuserwindow.ui
source/windows/removeitem/: removeitemwindow.cxx  removeitemwindow.hxx  removeitemwindow.ui
source/windows/start/: .startwindow.cxx.kate-swp  startwindow.cxx  startwindow.hxx  startwindow.ui
source/windows/startwindow/: startwindow.cxx  startwindow.ui
source/windows/updateitem/: updateitemwindow.cxx  updateitemwindow.hxx  updateitemwindow.ui
